--- a/ToDoList/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/ToDoList/Base.lproj/Main.storyboard
@@ -174,6 +174,6 @@
         <image name="Uncheck" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="4kG-fz-Vnb"/>
+        <segue reference="Aup-uW-lsk"/>
     </inferredMetricsTieBreakers>
 </document>
