--- a/ToDoList/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/ToDoList/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="139" y="511" width="42" height="30"/>
                                 <state key="normal" title="Log In"/>
                                 <connections>
-                                    <segue destination="EjC-1Q-Cv9" kind="show" id="h1r-xj-En8"/>
+                                    <segue destination="Odv-bQ-fNd" kind="show" id="h1r-xj-En8"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -42,15 +42,18 @@
         <!--View Controller-->
         <scene sceneID="PpR-1w-HfZ">
             <objects>
-                <viewController storyboardIdentifier="TableViewController" id="3Fh-Zx-HeX" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TableViewController" id="3Fh-Zx-HeX" customClass="ViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pOI-pd-w0A">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j9C-Oy-e3f">
-                                <rect key="frame" x="137" y="269" width="46" height="30"/>
+                                <rect key="frame" x="143" y="269" width="34" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Start"/>
+                                <connections>
+                                    <segue destination="Odv-bQ-fNd" kind="show" id="EgN-vW-fT5"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -59,7 +62,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XAh-4d-3Gx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="227" y="0.0"/>
+            <point key="canvasLocation" x="173" y="-23"/>
         </scene>
         <!--Title-->
         <scene sceneID="Zpc-GU-vKi">
@@ -111,11 +114,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Title" id="WU1-op-PcG">
-                        <barButtonItem key="leftBarButtonItem" title="Log out" id="G5d-CB-EkV">
-                            <connections>
-                                <action selector="signOut:" destination="EjC-1Q-Cv9" id="Hsj-qa-sZv"/>
-                            </connections>
-                        </barButtonItem>
+                        <barButtonItem key="leftBarButtonItem" title="Log out" id="G5d-CB-EkV"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="TlS-9X-YX1">
                             <connections>
                                 <segue destination="P6n-J6-B55" kind="show" identifier="AddTask" id="Aup-uW-lsk"/>
@@ -125,7 +124,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lPD-hV-daZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1128.75" y="0.0"/>
+            <point key="canvasLocation" x="2126.25" y="0.0"/>
         </scene>
         <!--Add-->
         <scene sceneID="tSH-nk-Cxz">
@@ -173,7 +172,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2uh-V2-ctV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1851" y="1"/>
+            <point key="canvasLocation" x="2848.125" y="0.0"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="SN6-zS-SEj">
@@ -189,13 +188,32 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FvW-ps-6kl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-864" y="0.0"/>
+            <point key="canvasLocation" x="-1545" y="58"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="3Jx-Kv-G3D">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Odv-bQ-fNd" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rBc-Ro-RD0">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="EjC-1Q-Cv9" kind="relationship" relationship="rootViewController" id="Ove-Jp-b8U"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Sy7-Sx-hSM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1128.75" y="0.0"/>
         </scene>
     </scenes>
     <resources>
         <image name="Uncheck" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="EgN-vW-fT5"/>
         <segue reference="Aup-uW-lsk"/>
     </inferredMetricsTieBreakers>
 </document>
