--- a/ToDoList/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/ToDoList/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="139" y="511" width="42" height="30"/>
                                 <state key="normal" title="Log In"/>
                                 <connections>
-                                    <segue destination="Odv-bQ-fNd" kind="show" id="h1r-xj-En8"/>
+                                    <segue destination="EjC-1Q-Cv9" kind="show" id="NWJ-QH-Z0u"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -37,37 +37,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zdE-EF-07S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-482" y="16"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="PpR-1w-HfZ">
-            <objects>
-                <viewController storyboardIdentifier="TableViewController" id="3Fh-Zx-HeX" customClass="ViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="pOI-pd-w0A">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j9C-Oy-e3f">
-                                <rect key="frame" x="143" y="269" width="34" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Start"/>
-                                <connections>
-                                    <segue destination="Odv-bQ-fNd" kind="show" id="EgN-vW-fT5"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="1HQ-Fn-odH"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="XAh-4d-3Gx" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="173" y="-23"/>
+            <point key="canvasLocation" x="98" y="0.0"/>
         </scene>
         <!--Title-->
         <scene sceneID="Zpc-GU-vKi">
             <objects>
-                <tableViewController storyboardIdentifier="TableViewController2" id="EjC-1Q-Cv9" customClass="TableViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="TableViewController" id="EjC-1Q-Cv9" customClass="TableViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="xPf-SV-PME">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -124,7 +99,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lPD-hV-daZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2126.25" y="0.0"/>
+            <point key="canvasLocation" x="969" y="0.0"/>
         </scene>
         <!--Add-->
         <scene sceneID="tSH-nk-Cxz">
@@ -172,7 +147,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2uh-V2-ctV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2848.125" y="0.0"/>
+            <point key="canvasLocation" x="1663" y="0.0"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="SN6-zS-SEj">
@@ -188,32 +163,13 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FvW-ps-6kl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1545" y="58"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="3Jx-Kv-G3D">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Odv-bQ-fNd" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rBc-Ro-RD0">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="EjC-1Q-Cv9" kind="relationship" relationship="rootViewController" id="Ove-Jp-b8U"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Sy7-Sx-hSM" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1128.75" y="0.0"/>
+            <point key="canvasLocation" x="-1112" y="0.0"/>
         </scene>
     </scenes>
     <resources>
         <image name="Uncheck" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="EgN-vW-fT5"/>
         <segue reference="Aup-uW-lsk"/>
     </inferredMetricsTieBreakers>
 </document>
