image tint color + spinner + keyboard fixing

--- a/ToDoList/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/ToDoList/Base.lproj/Main.storyboard
@@ -115,10 +115,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="t1b-FU-oCf" firstAttribute="trailing" secondItem="FqI-4F-rWv" secondAttribute="trailing" id="0x6-Gd-mDw"/>
-                            <constraint firstItem="FqI-4F-rWv" firstAttribute="top" secondItem="t1b-FU-oCf" secondAttribute="top" id="SN0-j2-EO3"/>
-                            <constraint firstItem="t1b-FU-oCf" firstAttribute="bottom" secondItem="FqI-4F-rWv" secondAttribute="bottom" id="eaG-IH-foE"/>
-                            <constraint firstItem="FqI-4F-rWv" firstAttribute="leading" secondItem="t1b-FU-oCf" secondAttribute="leading" id="xiK-mi-krg"/>
+                            <constraint firstItem="t1b-FU-oCf" firstAttribute="bottom" secondItem="FqI-4F-rWv" secondAttribute="bottom" id="OeP-4V-0H6"/>
+                            <constraint firstItem="FqI-4F-rWv" firstAttribute="trailing" secondItem="t1b-FU-oCf" secondAttribute="trailing" id="Os3-Nr-daM"/>
+                            <constraint firstItem="FqI-4F-rWv" firstAttribute="top" secondItem="t1b-FU-oCf" secondAttribute="top" id="fwd-eM-fvz"/>
+                            <constraint firstItem="FqI-4F-rWv" firstAttribute="leading" secondItem="t1b-FU-oCf" secondAttribute="leading" id="kfu-2s-fBj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="t1b-FU-oCf"/>
                     </view>
@@ -141,7 +141,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2uh-V2-ctV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1446" y="0.0"/>
+            <point key="canvasLocation" x="1445.625" y="0.0"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="SN6-zS-SEj">
